--- a/face-detection/Dockerfiles/Dockerfile
+++ b/face-detection/Dockerfiles/Dockerfile
@@ -1,5 +1,5 @@
-FROM docker.io/tiangolo/python-machine-learning:cuda9.1-python3.7
-#FROM nvidia/opencl:runtime-ubuntu18.04
+#FROM docker.io/tiangolo/python-machine-learning:cuda9.1-python3.7
+FROM nvidia/opencl:runtime-ubuntu18.04
 
 RUN adduser --disabled-password --gecos '' app_gpu
 
@@ -9,9 +9,9 @@ RUN chmod 777 /home/app_gpu
 
 ADD . /home/app_gpu
 
-#RUN apt update
-#RUN apt install python3 python3-pip libsm6 libxrender1 libxtst6 -y 
-RUN pip install -r req.txt
+RUN apt update
+RUN apt install python3 python3-pip libsm6 libxrender1 libxtst6 -y 
+RUN pip3 install -r req.txt
 
 RUN chown app_gpu:app_gpu ./ -R
 
