Added the operator helm chart

--- a/CrunchyPGO/crunchy-cluster/values.yaml
+++ b/CrunchyPGO/crunchy-cluster/values.yaml
@@ -1,5 +1,5 @@
 cluster_name: "hippo3"
-namespace: "wateringhole"
+namespace: "wateringtest"
 pgo_version: 4.3.0
 storage_class: azure-rwo
 storage_size: 1G
