Added namespace creation

--- a/argocdod/apps/crunchy-operator/templates/postgres-operator.yaml
+++ b/argocdod/apps/crunchy-operator/templates/postgres-operator.yaml
@@ -1,6 +1,11 @@
 apiVersion: v1
-kind: ServiceAccount
 {{- with .Values }}
+kind: Namespace
+metadata:
+  name: {{ .OPERATOR_NAMESPACE }}
+---
+apiVersion: v1
+kind: ServiceAccount
 metadata:
     name: pgo-deployer-sa
     namespace: "{{.OPERATOR_NAMESPACE}}"
