--- a/malbinon/Dockerfile
+++ b/malbinon/Dockerfile
@@ -1,4 +1,4 @@
-FROM tiangolo/uwsgi-nginx-flask:python3.6-alpine3.7
+FROM tiangolo/uwsgi-nginx-flask:python3.8-alpine
 COPY ./requirements.txt .
 COPY ./app /app
 COPY ./app/nginx_default.conf /etc/nginx/conf.d
