added uwsgi timeout

--- a/malbinon/app/nginx_default.conf
+++ b/malbinon/app/nginx_default.conf
@@ -3,11 +3,13 @@ server {
     location / {
         try_files $uri @app;
         proxy_buffering off;
+        uwsgi_read_timeout 300;
     }
     location @app {
         include uwsgi_params;
         uwsgi_pass unix:///tmp/uwsgi.sock;
         proxy_buffering off;
+        uwsgi_read_timeout 300;
     }
     location /static {
         autoindex on;
