ah ya pushon ohev otha

--- a/pushon/Dockerfile
+++ b/pushon/Dockerfile
@@ -1,7 +1,14 @@
-FROM golang:1.13.4 as build-env
+FROM golang:1.13.4-alpine as build-env
 RUN mkdir /pushon
 WORKDIR /pushon
 COPY src/ .
 RUN go mod download
+RUN go build -o pushon
 
-CMD ["go","run","main.go"]
+FROM alpine:latest
+RUN mkdir /pushon
+WORKDIR /pushon
+RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/*
+COPY --from=build-env /pushon/ .
+
+CMD ["./pushon"]
