--- a/argocdod/apps/crunchy-cluster/values.yaml
+++ b/argocdod/apps/crunchy-cluster/values.yaml
@@ -6,6 +6,6 @@ storage_size: 1G
 image_name: crunchy-postgres-ha
 image_tag: centos7-12.2-4.3.0
 database_name: mydb
-replicas: '\"2\"'
+replicas: 2
 username: myuser
 password: password
