--- a/CrunchyPGO/crunchy-cluster/values.yaml
+++ b/CrunchyPGO/crunchy-cluster/values.yaml
@@ -1,11 +1,11 @@
-cluster_name: "hippo3"
-namespace: "wateringtest"
+cluster_name: "pgcluster"
+namespace: "pgo"
 pgo_version: 4.3.0
-storage_class: azure-rwo
+storage_class: managed-premium
 storage_size: 1G
 image_name: crunchy-postgres-ha
 image_tag: centos7-12.2-4.3.0
 database_name: mydb
-replicas: '\"2\"'
+replicas: "2"
 username: myuser
 password: password
