--- a/argocdod/apps/crunchy-cluster/values.yaml
+++ b/argocdod/apps/crunchy-cluster/values.yaml
@@ -1,4 +1,4 @@
-cluster_name: "testcluster"
+cluster_name: "pgcluster"
 namespace: "pgo"
 pgo_version: 4.3.0
 storage_class: managed-premium
@@ -6,6 +6,6 @@ storage_size: 1G
 image_name: crunchy-postgres-ha
 image_tag: centos7-12.2-4.3.0
 database_name: mydb
-replicas: 2
+replicas: "2"
 username: myuser
 password: password
