--- a/argocdod/apps/crunchy-cluster/values.yaml
+++ b/argocdod/apps/crunchy-cluster/values.yaml
@@ -1,11 +1,11 @@
-cluster_name: "pgcluster"
+cluster_name: "testdb"
 namespace: "pgo"
 pgo_version: 4.3.0
 storage_class: managed-premium
 storage_size: 1G
 image_name: crunchy-postgres-ha
 image_tag: centos7-12.2-4.3.0
-database_name: pgcluster
+database_name: testdb
 replicas: "2"
 username: myuser
 password: password
