--- a/argocdod/apps/rh-sso/values.yaml
+++ b/argocdod/apps/rh-sso/values.yaml
@@ -1,9 +1,9 @@
 image:
-  repository: registry.ocp43-prod.sales.lab.tlv.redhat.com:5000/rh-sso-7/sso74-openshift-rhel8
+  repository: registry.redhat.io/rh-sso-7/sso74-openshift-rhel8
   tag: 7.4
 
 pg_image:
-  repository: registry.ocp43-prod.sales.lab.tlv.redhat.com:5000/rhel8/postgresql-10
+  repository: registry.redhat.io/rhel8/postgresql-10
   tag: latest
 
 rhsso_namespace: rh-sso
