--- a/argocdod/apps/rh-sso/values.yaml
+++ b/argocdod/apps/rh-sso/values.yaml
@@ -12,9 +12,9 @@ APPLICATION_NAME: "sso"
 SSO_HOSTNAME: ""
 JGROUPS_CLUSTER_PASSWORD: "Aa123456"
 DB_JNDI: "java:jboss/datasources/KeycloakDS"
-DB_DATABASE: "root"
-DB_USERNAME: "cloudlet"
-DB_PASSWORD: "Aa123456"
+DB_DATABASE: "testdb"
+DB_USERNAME: "myuser"
+DB_PASSWORD: "password"
 VOLUME_CAPACITY: "1Gi"
 SSO_ADMIN_USERNAME: "admin"
 SSO_ADMIN_PASSWORD: "Aa123456"
