--- a/argocdod/apps/rh-sso/values.yaml
+++ b/argocdod/apps/rh-sso/values.yaml
@@ -22,3 +22,7 @@ SSO_REALM: ""
 SSO_SERVICE_USERNAME: ""
 SSO_SERVICE_PASSWORD: ""
 MEMORY_LIMIT: "1Gi"
+SSO_POSTGRESQL_PORT: ""
+SSO_POSTGRESQL_PORT_5432_TCP: ""
+SSO_POSTGRESQL_SERVICE_HOST: ""
+SSO_POSTGRESQL_PORT_5432_TCP_ADDR: ""
