--- a/argocdod/apps/rh-sso + pgcluster/templates/sso74-x509-postgresql-persistent.yaml
+++ b/argocdod/apps/rh-sso + pgcluster/templates/sso74-x509-postgresql-persistent.yaml
@@ -52,7 +52,7 @@ metadata:
   namespace: {{ .Values.rhsso_namespace }}
 spec:
   type: ExternalName
-  externalName: testdb.pgo.svc.cluster.local
+  externalName: "{{ .Values.pg_service_prefix }}.svc.cluster.local"
   ports:
   - port: 5432
     
