--- a/argocdod/templates/rh-sso-with-db.yaml
+++ b/argocdod/templates/rh-sso-with-db.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: rh-sso+db-{{ template "cluster_name" . }}
+  name: rh-sso-with-db-{{ template "cluster_name" . }}
   namespace: {{ .Values.argocdNamespace }}
 spec:
   destination:
@@ -9,7 +9,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: {{ .Values.spec.project }}
   source:
-    path: argocdod/apps/rh-sso+db
+    path: argocdod/apps/rh-sso-with-db
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
