added pgcluster as subchart

--- a/argocdod/apps/rh-sso-with-db/charts/templates/pgcluster.yaml
+++ b/argocdod/apps/rh-sso-with-db/charts/templates/pgcluster.yaml
@@ -1,6 +1,6 @@
 apiVersion: crunchydata.com/v1
 kind: Pgcluster
-{{- with .Values  }}
+{{- with .Values.global  }}
 metadata:
   labels:
     autofail: 'true'
