--- a/argocdod/apps/rh-sso-with-db/Chart.yaml
+++ b/argocdod/apps/rh-sso-with-db/Chart.yaml
@@ -3,3 +3,7 @@ appVersion: "1.0"
 description: "Chart to deploy RedHat SSO in cluster"
 name: rh-sso
 version: 1.0.0
+dependencies:
+  - name: crunchy-cluster
+    version: 0.1.0
+    repository: "@crunchy-cluster"
