--- a/argocdod/apps/rh-sso-with-db/values.yaml
+++ b/argocdod/apps/rh-sso-with-db/values.yaml
@@ -24,15 +24,16 @@ SSO_POSTGRESQL_SERVICE_HOST: "ssodb.pgo.svc.cluster.local"
 SSO_POSTGRESQL_PORT_5432_TCP_ADDR: "ssodb.pgo.svc.cluster.local"
 
 # DB VARS
-pg_cluster_name: "ssodb"
-pg_namespace: "pgo"
-pg_pgo_version: 4.3.0
-pg_storage_class: managed-premium
-pg_storage_size: 1G
-pg_image_name: crunchy-postgres-ha
-pg_image_tag: centos7-12.2-4.3.0
-pg_database_name: ssodb
-pg_replicas: "2"
-pg_username: myuser
-pg_password: password
-pg_service_prefix: ssodb.pgo
+global:
+  pg_cluster_name: "ssodb"
+  pg_namespace: "pgo"
+  pg_pgo_version: 4.3.0
+  pg_storage_class: managed-premium
+  pg_storage_size: 1G
+  pg_image_name: crunchy-postgres-ha
+  pg_image_tag: centos7-12.2-4.3.0
+  pg_database_name: ssodb
+  pg_replicas: "2"
+  pg_username: myuser
+  pg_password: password
+  pg_service_prefix: ssodb.pgo
