--- a/argocdod/apps/mongodb-operator/values.yaml
+++ b/argocdod/apps/mongodb-operator/values.yaml
@@ -47,11 +47,11 @@ registry:
   # The pull secret must be specified
   imagePullSecrets:
   pullPolicy: Always
-  operator: quay.io/mongodb
-  initOpsManager: quay.io/mongodb
-  opsManager: quay.io/mongodb
-  initAppDb: quay.io/mongodb
-  appDb: quay.io/mongodb
+  operator: registry.connect.redhat.com/mongodb
+  initOpsManager: registry.connect.redhat.com/mongodb
+  opsManager: registry.connect.redhat.com/mongodb
+  initAppDb: registry.connect.redhat.com/mongodb
+  appDb: registry.connect.redhat.com/mongodb
 
 # Set this to true if the operator will require Kubernetes CA
 # infrastructure to generate TLS certificates.
