update ops manager to multiple persistence

--- a/argocdod/apps/mongodb-operator/values.yaml
+++ b/argocdod/apps/mongodb-operator/values.yaml
@@ -74,6 +74,21 @@ opsmanagercr:
   appdb:
     members: 3
     persistent: true
+    podSpec:
+      persistence:
+        multiple:
+          data:
+            labelSelector: data
+            storage: 16G
+            storageClass: managed-premium
+          journal:
+            labelSelector: journal
+            storage: 1G
+            storageClass: managed-premium
+          logs:
+            labelSelector: logs
+            storage: 3G
+            storageClass: managed-premium
   mms:
     ignoreInitialUiSetup: "true"
     fromEmailAddr: "cloudlet@cloudlet.com"
